--- a/modules/print/index.html
+++ b/modules/print/index.html
@@ -1,30 +1,1 @@
-<!doctype html>
-<html lang="de">
-<head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>PDF-Export</title>
-  <link rel="stylesheet" href="../../styles/base.css"/>
-</head>
-<body>
-  <div class="page" style="padding:16px;">
-    <div class="row">
-      <div class="col-12"><div class="card"><h2 style="margin:4px 0 10px;">PDF-Export</h2>
-<div class="row">
-  <div class="col-12"><div class="card">
-    <h3>Management Summary</h3>
-    <div id="kpis"></div>
-    <h3>Warnungen</h3><div id="warn"></div>
-    <h3>Empfehlungen</h3><div id="recs"></div>
-    <h3>Vertragsübersicht</h3>
-    <table class="table" id="t"><thead><tr><th>Versicherer</th><th>Sparten</th><th>Aktuell</th><th>Empfehlung</th><th>Ersparnis</th></tr></thead><tbody></tbody></table>
-    <div style="margin-top:12px;"><button class="btn btn-primary" onclick="window.print()">Als PDF speichern</button></div>
-    <p style="font-size:12px;color:var(--muted);margin-top:12px;">Interner Vermerk wird nicht gedruckt.</p>
-  </div></div>
-</div>
-</div></div>
-    </div>
-  </div>
-  <script>parent.postMessage({type:'set-title', value: 'PDF-Export'}, '*');</script>
-  <script src="./module.js"></script>
-</body></html>
+<!doctype html><html lang='de'><head><meta charset='utf-8'><link rel='stylesheet' href='../../styles/main.css'><title>Print</title></head><body><div class='card'><h3>Bestand</h3><table class='table' id='t'><thead><tr><th>Versicherer</th><th>Police</th><th>Sparten</th><th>Beitrag</th></tr></thead><tbody></tbody></table><button class='btn no-print' onclick='window.print()'>Als PDF speichern</button></div><script src='../../scripts/storage.js'></script><script>const tb=document.querySelector('#t tbody'); (DFS.get(DFS.KEYS.contracts,[])).forEach(c=>{const tr=document.createElement('tr'); tr.innerHTML='<td>'+c.versicherer+'</td><td>'+c.policeNr+'</td><td>'+c.sparten.join(', ')+'</td><td>'+DFS.currencyDE(c.jahresbeitrag||0)+'</td>'; tb.appendChild(tr);});</script></body></html>
