--- a/index.html
+++ b/index.html
@@ -1,50 +1,43 @@
-
-<!doctype html><html lang="de"><head>
-<meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
-<title>DFS – Analyse (Supabase)</title>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="./styles/main.css">
-</head><body>
-<div class="container">
-  <aside class="sidebar">
-    <div class="brand">
-      <img src="./assets/logo.png" alt="DFS">
-      <div><div style="font-weight:600">DFS Analyse-Tool</div><div style="font-size:12px;color:#C0C0C0">Supabase</div></div>
-    </div>
-    <div class="nav">
-      <button data-target="./modules/home/index.html" class="active">🏠 Übersicht</button>
-      <button data-target="./modules/customer/index.html">👤 Kunden</button>
-      <button data-target="./modules/contracts/index.html">📄 Verträge</button>
-      <button data-target="./modules/print/index.html">🖨️ PDF</button>
-    </div>
-  </aside>
-  <main class="main">
-    <div class="topbar">
-      <div>Projekt: <strong>Deutscher Finanzservice</strong></div>
-      <div class="row">
-        <button class="btn-outline" id="btn-keys">Supabase verbinden</button>
-      </div>
-    </div>
-    <div class="iframe-wrap"><iframe id="content" src="./modules/home/index.html"></iframe></div>
-  </main>
-</div>
-<div id="toast" class="toast"></div>
-<script src="./scripts/storage.js"></script>
-<script type="module" src="./scripts/supabase.js"></script>
-<script>
-  document.querySelectorAll('.nav button').forEach(btn=>{
-    btn.addEventListener('click', ()=>{
-      document.querySelectorAll('.nav button').forEach(b=>b.classList.remove('active'));
-      btn.classList.add('active');
-      document.getElementById('content').src = btn.getAttribute('data-target');
-    });
-  });
-  document.getElementById('btn-keys').onclick = ()=>{
-    const url = prompt('SUPABASE_URL? (https://...supabase.co)', localStorage.getItem('dfs.supabase.url')||'');
-    if(!url) return;
-    const key = prompt('SUPABASE_ANON_KEY? (public anon)', localStorage.getItem('dfs.supabase.key')||'');
-    if(!key) return;
-    window.DFS.setSupabaseKeys(url, key);
-  };
-</script>
-</body></html>
+<!doctype html>
+<html lang="de">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>DFS Versicherungsanalyse</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./styles/main.css" />
+  <!-- Loads Supabase keys from Netlify env and stores them in localStorage -->
+  <script defer src="./scripts/supabase-env-loader.js"></script>
+  <style>
+    body{background:#00223B;color:#fff;font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;margin:0}
+    .shell{display:flex;min-height:100vh}
+    aside{width:260px;background:rgba(255,255,255,.04);border-right:1px solid rgba(255,255,255,.08);padding:16px}
+    main{flex:1}
+    .nav a{display:block;padding:10px 12px;border-radius:10px;color:#fff;text-decoration:none;border:1px solid rgba(255,255,255,.08);margin-bottom:8px}
+    .nav a:hover{border-color:#896c20}
+    header{padding:16px;border-bottom:1px solid rgba(255,255,255,.08)}
+    iframe{border:0;width:100%;height:calc(100vh - 64px);background:#071d31}
+    .brand{font-weight:600;letter-spacing:.3px}
+  </style>
+</head>
+<body>
+  <div class="shell">
+    <aside>
+      <div class="brand">Deutscher Finanzservice</div>
+      <nav class="nav" aria-label="Module">
+        <a href="./modules/home/index.html" target="content">Start</a>
+        <a href="./modules/customer/index.html" target="content">Kunden</a>
+        <a href="./modules/contracts/index.html" target="content">Verträge</a>
+        <a href="./modules/analyse/index.html" target="content">Analyse</a>
+        <a href="./modules/dashboard/index.html" target="content">Dashboard</a>
+        <a href="./modules/print/index.html" target="content">PDF/Print</a>
+      </nav>
+    </aside>
+    <main>
+      <header>DFS Versicherungsanalyse</header>
+      <iframe id="content" name="content" src="./modules/home/index.html" title="Inhalt"></iframe>
+    </main>
+  </div>
+</body>
+</html>
